--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="plan" id="update" onmouseover="parallax()">
+	<div class="plan" id="update">
 			<div class="row content">
 				<div class="col-sm-3">
 					<div class="well">
